--- a/src/index.css
+++ b/src/index.css
@@ -2,19 +2,19 @@
 @tailwind components;
 
 .head {
-  @apply border border-gray-300 px-4 py-2;
+  @apply border border-light-gray px-4 py-2;
 }
 
 .lable {
-  @apply block text-gray-700 text-sm font-bold mb-2;
+  @apply block text-custom-black text-sm font-bold mb-2;
 }
 
 .inputX {
-  @apply appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none bg-transparent;
+  @apply appearance-none border rounded w-full py-2 px-3 text-light-gray leading-tight focus:outline-none bg-transparent;
 }
 
 .link {
-  @apply block md:inline-block mt-4 mx-5 md:mt-0 hover:border-y border-gray-950 font-medium px-4 md:px-0;
+  @apply block md:inline-block mt-4 mx-5 md:mt-0 hover:border-y border-light-gray font-medium px-4 md:px-0;
 }
 
 @tailwind utilities;
